--- a/package.json
+++ b/package.json
@@ -9,14 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
+    "axios": "^1.7.4",
+    "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
+    "konva": "^9.3.14",
+    "net": "^1.0.2",
+    "next": "14.2.5",
+    "next-images": "^1.8.5",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-draggable": "^4.4.6",
+    "react-dropzone": "^14.2.3",
+    "react-konva": "^18.2.10",
+    "react-resizable": "^3.0.5",
+    "react-ruler": "^0.15.1",
+    "react-use": "^17.5.1",
+    "remove.bg": "^1.3.0",
+    "tls": "^0.0.1",
+    "use-image": "^1.1.1"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
